--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #0D1215;
+  color: white;
 }
 
 code {
@@ -44,9 +46,10 @@ a {
   top: 150px
 } */
 
-/* .App {
-  display: grid;
+.App {
+  
+  /* display: grid;
   grid-template-columns: 1fr;
   grid-gap: 16px;
-  padding-bottom: 24px;
-} */
+  padding-bottom: 24px; */
+}
